re-add align stretch for fixed on overflow

--- a/src/less/definitions/layout/grid.less
+++ b/src/less/definitions/layout/grid.less
@@ -123,6 +123,10 @@
             /* Older spec implementation  -- Remove when polyfill updated */
             scroll-snap-destination: 0% 75%;
             scroll-snap-points-x: repeat( 100% );
+
+            &.fixed {
+                align-items: stretch
+            }
         }
 
         & > [class^=col-],
